<resources>
    <string name="app_name">Language</string>
    <string name="Username">User Name</string>
    <string name="Password">Password</string>
    <string name="forgetpasswoed">FORGET PASSWORD ?</string>
    <string name="newuser">New User?</string>
    <string name="SignUp">Sign Up</string>
    <string name="Signintocontinue">Sign In To Continue</string>
    <string name="signin">S I G N I N</string>
    <string name="email">Email</string>
</resources>